spacing fix

--- a/src/css/project.css
+++ b/src/css/project.css
@@ -165,7 +165,7 @@
 #project .container .fourgrid {
   display: flex;
   width: 1200px;
-  margin: auto;
+  margin: 50px auto;
   justify-content: space-between;
 }
 #project .container .fourgrid .item {
